Refactor patient management with dedicated repositories for history and prescriptions
- Introduced `MedicalHistoryRepo` and `PrescriptionRepo` for streamlined database interactions.
- Updated `PatientAppService` to delegate history and prescription logic to new repositories.
- Replaced `orphanRemoval` cascade with `PERSIST` for improved lifecycle management of child entities.
- Added methods to `MedicalHistoryRepo` and `PrescriptionRepo` for fetching patient-specific data in a sorted manner.
- Refactored `PatientMapper` and `JpaPatientRepositoryAdapter` to enhance child entity synchronization and mapping.
- Enabled SQL and JDBC logging for Hibernate with debug-level configurations in `application.properties`.
- Replaced manual entity updates with `EntityManager` references to leverage JPA's persistence context.