@@ -4,6 +4,15 @@ import com.pppk.patients.patients_api.dto.*;
 import com.pppk.patients.patients_domain.Model.*;
 import com.pppk.patients.patients_domain.vo.*;
 import com.pppk.patients.patients_domain.port.*;
+import com.pppk.patients.patients_infra.Entities.MedicalHistoryEntity;
+import com.pppk.patients.patients_infra.Entities.PatientEntity;
+import com.pppk.patients.patients_infra.Entities.PrescriptionEntity;
+import com.pppk.patients.patients_infra.Mappers.MedicalHistoryMapper;
+import com.pppk.patients.patients_infra.Mappers.PrescriptionMapper;
+import com.pppk.patients.patients_infra.Repos.MedicalHistoryRepo;
+import com.pppk.patients.patients_infra.Repos.PrescriptionRepo;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.*; import org.springframework.stereotype.Service; import org.springframework.transaction.annotation.Transactional;
 
@@ -12,8 +21,14 @@ import java.util.stream.Collectors;
 
 @Service @RequiredArgsConstructor
 public class PatientAppService {
-    private final PatientRepository repo; private final OibUniquenessChecker oibCheck;
-
+    private final PatientRepository repo;
+    private final MedicalHistoryRepo historyRepo;
+    private final PrescriptionRepo prescriptionRepo;
+    private final MedicalHistoryMapper historyMapper;
+    private final PrescriptionMapper prescriptionMapper;
+    private final OibUniquenessChecker oibCheck;
+    @PersistenceContext
+    private EntityManager entityManager;
     @Transactional
     public PatientResponse create(CreatePatientRequest r){
         var p = Patient.register(r.oib(), r.firstName(), r.lastName(), r.birthDate(), Sex.valueOf(r.sex()), oibCheck);
@@ -43,40 +58,56 @@ public class PatientAppService {
 
     @Transactional public void delete(Long id){ repo.delete(id); }
 
-    @Transactional public void addHistory(Long id, HistoryRequest r){
-        var p = repo.byId(id).orElseThrow();
-        p.addHistory(r.diseaseName(), new DateRange(r.startDate(), r.endDate()));
-        repo.save(p);
+    @Transactional
+    public void addHistory(Long patientId, HistoryRequest r) {
+        var e = new MedicalHistoryEntity();
+        e.setDiseaseName(r.diseaseName());
+        e.setStartDate(r.startDate());
+        e.setEndDate(r.endDate());
+
+        var pe = entityManager.getReference(PatientEntity.class, patientId);
+        e.setPatient(pe);
+
+        historyRepo.save(e);
     }
 
-    @Transactional public void prescribe(Long id, PrescriptionRequest r){
-        var p = repo.byId(id).orElseThrow();
-        p.prescribe(r.medication(), r.dosage(), r.instructions());
-        repo.save(p);
+    @Transactional
+    public void prescribe(Long patientId, PrescriptionRequest r) {
+        var e = new PrescriptionEntity();
+        e.setMedication(r.medication());
+        e.setDosage(r.dosage());
+        e.setInstructions(r.instructions());
+
+        var pe = entityManager.getReference(PatientEntity.class, patientId); // <-- replace the stub
+        e.setPatient(pe);
+
+        prescriptionRepo.save(e);
     }
 
     @Transactional(readOnly = true)
-    public List<HistoryResponse> history(Long id) {
-        var p = repo.byId(id).orElseThrow();
-        return p.getHistory().stream()
+    public List<HistoryResponse> history(Long patientId) {
+        return historyRepo.findAllByPatient_IdOrderByStartDateDesc(patientId)
+                .stream()
                 .map(h -> new HistoryResponse(
                         h.getDiseaseName(),
-                        h.getPeriod().start(),
-                        h.getPeriod().end()))
-                .collect(Collectors.toList());
+                        h.getStartDate(),
+                        h.getEndDate()
+                ))
+                .toList();
     }
 
     @Transactional(readOnly = true)
-    public List<PrescriptionResponse> prescriptions(Long id) {
-        var p = repo.byId(id).orElseThrow();
-        return p.getPrescriptions().stream()
-                .map(rx -> new PrescriptionResponse(
-                        rx.getMedication(),
-                        rx.getDosage(),
-                        rx.getInstructions()))
-                .collect(Collectors.toList());
-    }
+    public List<PrescriptionResponse> prescriptions(Long patientId) {
+        return prescriptionRepo.findAllByPatient_IdOrderByPrescribedAtDesc(patientId)
+                .stream()
+                .map(p -> new PrescriptionResponse(
 
+                        p.getMedication(),
+                        p.getDosage(),
+                        p.getInstructions()
+                ))
+                .toList();
+    }
     private PatientResponse toResp(Patient p){
         return new PatientResponse(p.getId(), p.getOib().value(), p.getName().first(), p.getName().last(),
                 p.getBirthDate().value(), p.getSex().name());
